# fastkey

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: Code Quality.yml  Release.yml  Versioning.yml
sample/: __init__.py
sample/html/: index.html
scripts/: format.ps1  lint.ps1
src/: __init__.py
src/db/: __init__.py  db_alchemy.py  db_dictionary.py
src/router/: __init__.py  auth.py
src/router/js/: fastkey.js
src/schema/: __init__.py  challenge.py  login.py  register.py
